# ChromosomeToolkit

./: .gitignore  Cargo.toml  LICENSE  README.md  notes.txt
.github/workflows/: release.yml
crates/bins/gltf_to_xmac/: Cargo.toml
crates/bins/gltf_to_xmac/src/: main.rs  translation.rs
crates/bins/json_to_lrent/: Cargo.toml
crates/bins/json_to_lrent/src/: main.rs
crates/bins/json_to_tple/: Cargo.toml
crates/bins/json_to_tple/src/: main.rs
crates/bins/lrent_to_json/: Cargo.toml
crates/bins/lrent_to_json/src/: main.rs
crates/bins/mp3_to_xsnd/: Cargo.toml
crates/bins/mp3_to_xsnd/src/: main.rs
crates/bins/tple_to_json/: Cargo.toml
crates/bins/tple_to_json/src/: main.rs
crates/bins/ximg_to_png/: Cargo.toml
crates/bins/ximg_to_png/src/: main.rs
crates/bins/xmac_to_gltf/: Cargo.toml
crates/bins/xmac_to_gltf/src/: main.rs  translation.rs
crates/bins/xmac_to_usd/: Cargo.toml
crates/bins/xmac_to_usd/src/: main.rs
crates/formats/: Cargo.toml  build.rs
crates/formats/lib/: Script.lib  SharedBase.lib  readme.txt
crates/formats/src/: archive.rs  binimport.rs  error.rs  helpers.rs  lib.rs  lrent.rs  resourcefile.rs  tple.rs  xmac.rs  xsnd.rs
crates/formats/src/file_formats/: lrent.rs  tple.rs  ximg.rs  xsnd.rs
crates/formats/src/file_formats/xmac/: mod.rs
crates/formats/src/file_formats/xmac/chunks/: info.rs  material.rs  mesh.rs  morph_targets.rs  nodes.rs  skinning_info.rs  unknown.rs
crates/formats/src/inproc/: arrays.rs  input.rs  modules.rs  script.rs  string.rs  timer.rs  vtable_store.rs
crates/formats/src/types/: containers.rs  entity.rs  gltf.rs  mod.rs  object.rs  properties.rs  property_set.rs  template.rs  time.rs
crates/formats/src/types/properties/: enums.rs
crates/formats/src/xmac/: chunks.rs  mod.rs
crates/formats/src/xmac/chunks/: info.rs  material.rs  material_info.rs  mesh.rs  morph_targets.rs  nodes.rs  skinning_info.rs  unknown.rs
crates/r1-sys/gluegen/: Cargo.toml
crates/r1-sys/gluegen/src/: lib.rs
crates/r1-sys/r1-engine-sys/: Cargo.toml  build.rs
crates/r1-sys/r1-engine-sys/lib/: Engine.def
crates/r1-sys/r1-engine-sys/src/: lib.rs  manual_types.rs
crates/r1-sys/r1-engine-sys/src/manual_types/: array.rs  enums.rs  graphics.rs
crates/r1-sys/r1-game-sys/: Cargo.toml  build.rs
crates/r1-sys/r1-game-sys/lib/: Game.def
crates/r1-sys/r1-game-sys/src/: lib.rs  manual_types.rs
crates/r1-sys/r1-game-sys/src/manual_types/: enums.rs
crates/r1-sys/r1-script-sys/: Cargo.toml  build.rs
crates/r1-sys/r1-script-sys/lib/: Script.def
crates/r1-sys/r1-sharedbase-sys/: Cargo.toml  build.rs
crates/r1-sys/r1-sharedbase-sys/lib/: SharedBase.def
crates/r1-sys/r1-sharedbase-sys/src/: lib.rs  manual_types.rs
crates/r1-sys/r1-sharedbase-sys/src/manual_types/: array.rs  enums.rs  graphics.rs  math.rs  memory.rs  properties.rs  string.rs  time.rs  variant.rs
crates/scripts/block_fix/: Cargo.toml
crates/scripts/block_fix/src/: lib.rs
crates/scripts/detours/: Cargo.toml
crates/scripts/detours/src/: lib.rs
