[workspace]
members = [
    "crates/formats",
    "crates/bins/mp3_to_xsnd",
    "crates/bins/lrent_to_json",
    "crates/bins/json_to_lrent",
    "crates/bins/tple_to_json",
    "crates/bins/json_to_tple",
    "crates/bins/xmac_to_gltf",
    "crates/bins/gltf_to_xmac",
    "crates/bins/ximg_to_png",
    "crates/scripts/block_fix",
    "crates/scripts/detours",
    "crates/r1-sys/r1-game-sys",
    "crates/r1-sys/r1-sharedbase-sys",
    "crates/r1-sys/gluegen", "crates/r1-sys/r1-engine-sys", "crates/r1-sys/r1-script-sys",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
num_enum = "0.7"
gltf = { version = "1.4", features = [
    "KHR_materials_specular",
    "KHR_materials_ior",
    "KHR_texture_transform",
    "extras",
] }
image_dds = "0.6"
windows = {version = "0.61.1"}

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
